gradle homogenize